test/subjects/errors/simple_neg_break.php
<?php

	break -2; // { Error: Cannot break/continue 1 levels }

?>
